2000-03-14  Ken Raeburn  <raeburn@mit.edu>

	* sock2p.c: New file.
	(inet_ntop): Define if system doesn't provide it.
	(sockaddr2p): New function.
	* Makefile.in (SRCS, OBJS): Add sock2p.
	* kdc_util.h (inet_ntop, sockaddr2p): Declare them.

	* network.c (add_fd): New function.  Reallocate udp_port_fds array
	as needed here.
	(setup_port): Use add_fd to record new sockets.  Use inet_ntop
	unconditionally.  Disable ipv6 support until process_packet and
	friends will support it.
	(process_packet): Ignore ECONNREFUSED when reading UDP packets.
	Fill in port field of faddr properly, dependent on address
	family.  Use sockaddr2p when logging source address.

2000-03-12  Ezra Peisach  <epeisach@mit.edu>

	* replay.c, kdb_util.h (kdc_check_lookaside, kdc_insert_lookaside): 
	Make second argument const to keep handle compiler warnings.

2000-03-01  Tom Yu  <tlyu@mit.edu>

	* main.c: Move kdc_initialize_rcache() to kdc_util.c

	* kdc_util.c (kdc_initialize_rcache): Move kdc_initialize_rcache()
	back here since it's needed for rtest to work.  process_tgs_req()
	which is called from rtest needs to call kdc_intiialize_rcache()
	and we can't very well link rtest with main.o

	* kdc_preauth.c (verify_sam_response): Ooops.  Get rc_lifetime
	from kdc_util, since it's actually declared there.

	* configure.in: Fix --enable-kdc-replay-cache to actually default
	to "yes".

	* kdc_preauth.c (verify_sam_response): Declare and set rc_lifetime
	for real.

2000-02-29  Tom Yu  <tlyu@mit.edu>

	* dispatch.c: Include some more net-related headers.
	(dispatch): Fix ifndef HAVE_INET_NTOP branch.

2000-02-28  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: New enable-kdc-replay-cache arg.  Define
	USE_RCACHE when enabled, NOCACHE when disabled.  Defaults to
	enabled.
	* Makefile.in (DEFINES): Don't define NOCACHE any more.

2000-02-25  Tom Yu  <tlyu@mit.edu>

	* configure.in: Check for sys/sockio.h

	* network.c: Conditionally include sys/sockio.h for SIOC* if
	necessary.